--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -54,7 +54,7 @@ jobs:
       - name: 📊 Sonar Analysis
         run: >
           mvn -B sonar:sonar 
-          -Dsonar.projectKey=DaniYDevs_${{ env.ARTIFACT }}
+          -Dsonar.projectKey=daniydevs_${{ env.ARTIFACT }}
           -Dsonar.organization=DaniYDevs
           -Dsonar.host.url=https://sonarcloud.io 
           -Dsonar.token=${{ secrets.SONAR_TOKEN }}
