--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -55,7 +55,7 @@ jobs:
         run: >
           mvn -B sonar:sonar 
           -Dsonar.projectKey=daniydevs_${{ env.ARTIFACT }}
-          -Dsonar.organization=DaniYDevs
+          -Dsonar.organization=daniydevs
           -Dsonar.host.url=https://sonarcloud.io 
           -Dsonar.token=${{ secrets.SONAR_TOKEN }}
         env:
